--- a/install-kubeflow/app.yaml
+++ b/install-kubeflow/app.yaml
@@ -5,7 +5,7 @@ metadata:
   name: install-kubeflow
   namespace: default
 spec:
-  appdir: /root/install-kubeflow
+  appdir: /root/kubeflow-tfx-workshop/install-kubeflow
   componentParams:
     ambassador:
     - name: ambassadorServiceType
@@ -38,7 +38,7 @@ spec:
   - tensorboard
   - tf-serving
   - tf-training
-  repo: /root/install-kubeflow/.cache/v0.5.1/kubeflow
+  repo: /root/kubeflow-tfx-workshop/install-kubeflow/.cache/v0.5.1/kubeflow
   useBasicAuth: false
   useIstio: true
   version: v0.5.1
