--- a/install-kubeflow/ks_app/app.yaml
+++ b/install-kubeflow/ks_app/app.yaml
@@ -72,5 +72,5 @@ name: ks_app
 registries:
   kubeflow:
     protocol: fs
-    uri: /root/install-kubeflow/.cache/v0.5.1/kubeflow
+    uri: /root/kubeflow-tfx-workshop/install-kubeflow/.cache/v0.5.1/kubeflow
 version: 0.0.1
