--- a/sdk/python/requirements.txt
+++ b/sdk/python/requirements.txt
@@ -2,7 +2,8 @@ urllib3>=1.15,<1.25 #Fixing the version conflict with the "requests" package cau
 six>=1.10
 certifi
 python-dateutil
-PyYAML
+# MUST PIN TO 3.13 or else we see this:  https://github.com/nmlorg/metabot/issues/40
+PyYAML==3.13
 google-cloud-storage>=1.13.0
 kubernetes>=8.0.0, <=9.0.0
 PyJWT>=1.6.4
