--- a/infrastructure/config/nginx/pipelineai-nginx.conf
+++ b/infrastructure/config/nginx/pipelineai-nginx.conf
@@ -868,6 +868,42 @@ server {
         proxy_set_header Upgrade $http_upgrade;
     }
 
+    location /istio/grafana {
+        proxy_pass http://ingress-controller-http;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+    }
+
+    location /istio/grafana/ {
+        proxy_pass http://ingress-controller-http;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+    }
+
+    location /grafana {
+        proxy_pass http://ingress-controller-http;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+    }
+
+    location /grafana/ {
+        proxy_pass http://ingress-controller-http;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+    }
+
 #    location ~* /notebook/(.*)/(.*)/(api/kernels/[^/]+/(channels|iopub|shell|stdin)|terminals/websocket)/? {
 #        proxy_pass http://kubeflow_ambassador;
 #        proxy_set_header Host $host;
