--- a/install-istio/istio-noauth.yaml
+++ b/install-istio/istio-noauth.yaml
@@ -14466,10 +14466,18 @@ spec:
             value: Admin
           - name: GF_PATHS_DATA
             value: /data/grafana
+          - name: GF_PATHS_DOMAIN
+            value: 127.0.0.1
           - name: GF_SERVER_DOMAIN
-            value: "localhost"
+            value: 127.0.0.1 
+          - name: GF_PATHS_ROOT_URL
+            value: '%(protocol)s://%(domain)s:/grafana/'
           - name: GF_SERVER_ROOT_URL
-            value: '%(protocol)s://%(domain)s:/grafana'
+            value: '%(protocol)s://%(domain)s:/grafana/'
+#          - name: GF_PATHS_STATIC_ROOT_PATH
+#            value: /grafana
+#          - name: GF_SERVER_STATIC_ROOT_PATH
+#            value: /grafana            
           resources:
             requests:
               cpu: 10m
