--- a/infrastructure/config/nginx/pipelineai-nginx.conf
+++ b/infrastructure/config/nginx/pipelineai-nginx.conf
@@ -926,8 +926,8 @@ server {
         # Note:  We had to add this to prepare for the istio transition (after changing to ingress-controller-http)
         proxy_http_version 1.1;
 # Turning these on will cause jupyter (/tree, not sure about /lab) to be flakey including missing visualizations and such
-#        proxy_set_header Upgrade $http_upgrade;
-#        proxy_set_header Connection $connection_upgrade;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
     }
 
 #    location = / {
